tests/typing/bad/testfile-for-2.c

struct S { int a; };
int main() { struct S s; for( ; s; ); }
